gitops/IstioVirtualService/authsrv-istiovirtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-auth-service
spec:
  hosts:
  - "*"
  gateways:
  - glotixz-authsrv-gateway
  http:
  - match:
    - uri:
        prefix: /api/users
    - uri:
        prefix: /api/auth    
    route:
    - destination:
        host: auth-srv
        port:
          number: 4000
