gitops/IstioVirtualService/paymentsrv-istiovirtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-payments-service
spec:
  hosts:
  - "*"
  gateways:
  - glotixz-paymentsrv-gateway
  http:      
  - match:
    - uri:
        prefix: /api/payments
    route:
    - destination:
        host: payments-srv
        port:
          number: 4004
