gitops/IstioVirtualService/ticketsrv-istiovirtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-ticket-service
spec:
  hosts:
  - "*"
  gateways:
  - glotixz-ticketsrv-gateway
  http:      
  - match:
    - uri:
        prefix: /api/tickets
    route:
    - destination:
        host: tickets-srv
        port:
          number: 4001
